--- a/src/styles/components/_DecrementButton.scss
+++ b/src/styles/components/_DecrementButton.scss
@@ -1,5 +1,5 @@
 @import '../abstract/variables';
 
 #DecrementButton {
-  background-color: $soft-red;
+  background-color: $decrement-button-color;
 }
