--- a/src/styles/components/_IncrementButton.scss
+++ b/src/styles/components/_IncrementButton.scss
@@ -1,5 +1,5 @@
 @import '../abstract/variables';
 
 #IncrementButton {
-  background-color: $soft-green;
+  background-color: $increment-button-color;
 }
